# notification

./: CMakeLists.txt  README.md  notifications.pro
Notifications/: NotificationLayout.cpp  NotificationLayout.h  NotificationWidget.cpp  NotificationWidget.h
Operation/: Operation.cpp  Operation.h
Result/: Result.cpp  Result.h
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Notifications/: NotificationLayout.cpp  NotificationLayout.h  NotificationWidget.cpp  NotificationWidget.h
src/Operation/: Operation.h
